<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">Kotlin-Shack</string>
    <string name="login_email">Email Address</string>
    <string name="login_password">Password</string>
    <string name="login_text">Login</string>
    <string name="login_username">User Name</string>
    <string name="menu_rootcheck">Root Detection Implementation</string>
    <string name="menu_rootcheck_details">Instructions\n\nReview the root detection function from the source code.\n\nIf done correctly, there should be multiple methods of performing root detection.</string>
    <string name="menu_sharedpref">SharedPreferences Implementation</string>
    <string name="menu_sharedpref_details">Instructions\n\nReview the content in /data/data/[package-name]/shared_prefs/*.xml\n\nIf done correctly, content in the XML file should be encrypted using encryption keys from the KeyStore.</string>
    <string name="menu_text">Test Cases</string>
    <string name="menu_webview">WebView Implementation</string>
    <string name="menu_webview_details">Instructions\n\nRender unsafe content in both of the following WebViews with different settings.\n\nIf done correctly, the safe WebViews should prevent arbitrary JavaScript execution.</string>
    <string name="message_keypair_already_exists">KeyPair Already Exists!</string>
    <string name="message_keypair_does_not_exist">KeyPair does not exist in Keystore</string>
    <string name="message_problem_encryption">Problem during Encryption</string>
    <string name="message_supported_api">Android Keystore only works on Android Jelly Bean and higher</string>
    <string name="register_cpassword">Confirm Password</string>
    <string name="register_email">Email Address</string>
    <string name="register_name">User Name</string>
    <string name="register_password">Password</string>
    <string name="register_text">Register New Account</string>
    <string name="root_detection">Root Detection Check</string>
    <string name="rootcheck_insecure">Launch Single Root Detection</string>
    <string name="rootcheck_secure">Launch Multiple Root Detection</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="webview_insecure">Launch Insecure WebView</string>
    <string name="webview_secure">Launch Secure WebView</string>
</resources>
