<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/registerlayout"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/progressBar"
            android:padding="10dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyle"/>
        <TextView
            android:textSize="@dimen/title_text"
            android:textColor="@color/colorAccent"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_text"/>
        <EditText
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:id="@+id/endpoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="http://ror.mstg.mobi"
            android:textAlignment="center"/>
        <EditText
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:id="@+id/etusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username"
            android:textAlignment="center"/>
        <EditText
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:id="@+id/etemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_email"
            android:textAlignment="center"/>
        <EditText
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:id="@+id/etpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:textAlignment="center"/>
        <EditText
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:id="@+id/etconfirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_cpassword"
            android:inputType="textPassword"
            android:textAlignment="center"/>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnreset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reset"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/btnsubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
