<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/menulayout"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="@dimen/title_text"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:paddingTop="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_text"
                android:textAllCaps="true"/>
            <TextView
                android:textSize="@dimen/menu_items_textsize"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/tvsharedpref"
                android:background="@color/colorAccent"
                android:padding="@dimen/menu_items_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/menu_sharedpref"
                android:textAlignment="center"/>
            <TextView
                android:textSize="@dimen/menu_items_textsize"
                android:textColor="@color/colorTextDetails"
                android:id="@+id/tvsharedpref_details"
                android:background="@color/colorTextBackground"
                android:padding="@dimen/menu_items_padding"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_sharedpref_details"
                android:textAlignment="center"/>
            <TextView
                android:textSize="@dimen/menu_items_textsize"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/tvwebview"
                android:background="@color/colorAccent"
                android:padding="@dimen/menu_items_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/menu_webview"
                android:textAlignment="center"/>
            <TextView
                android:textSize="@dimen/menu_items_textsize"
                android:textColor="@color/colorTextDetails"
                android:id="@+id/tvwebview_details"
                android:background="@color/colorTextBackground"
                android:padding="@dimen/menu_items_padding"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_webview_details"
                android:textAlignment="center"/>
            <Button
                android:textSize="@dimen/menu_items_textsize"
                android:textColor="@color/colorTextDetails"
                android:id="@+id/btn_safe_webview"
                android:background="@drawable/button_border"
                android:padding="@dimen/menu_items_padding"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/webview_secure"
                android:fontFamily="monospace"
                android:textAlignment="center"/>
            <Button
                android:textSize="@dimen/menu_items_textsize"
                android:textColor="@color/colorTextDetails"
                android:id="@+id/btn_unsafe_webview"
                android:background="@drawable/button_border"
                android:padding="@dimen/menu_items_padding"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/webview_insecure"
                android:fontFamily="monospace"
                android:textAlignment="center"/>
            <Button
                android:textSize="@dimen/menu_items_textsize"
                android:textColor="@color/colorTextDetails"
                android:id="@+id/btn_insecureDeeplink"
                android:background="@drawable/button_border"
                android:padding="@dimen/menu_items_padding"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Launch Insecure DeepLink"
                android:fontFamily="monospace"
                android:textAlignment="center"/>
            <TextView
                android:textSize="@dimen/menu_items_textsize"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/tvdeeplink"
                android:background="@color/colorAccent"
                android:padding="@dimen/menu_items_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="Deep Link Implementation"
                android:textAlignment="center"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
