<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/loginlayout"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/progressBar"
            android:padding="10dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyle"/>
        <TextView
            android:textSize="@dimen/title_text"
            android:textColor="@color/colorAccent"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"/>
        <EditText
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:id="@+id/etendpoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="http://ror.mstg.mobi"
            android:textAlignment="center"/>
        <EditText
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:id="@+id/etemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email"
            android:textAlignment="center"/>
        <EditText
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:id="@+id/etpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:textAlignment="center"/>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnregister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Register"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/btnsubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textAllCaps="false"/>
        </LinearLayout>
        <Button
            android:textSize="@dimen/menu_items_textsize"
            android:textColor="@color/colorTextDetails"
            android:id="@+id/btn_secure_rootcheck"
            android:background="@drawable/button_border"
            android:padding="@dimen/menu_items_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rootcheck_secure"
            android:fontFamily="monospace"
            android:textAlignment="center"/>
        <Button
            android:textSize="@dimen/menu_items_textsize"
            android:textColor="@color/colorTextDetails"
            android:id="@+id/btn_insecure_rootcheck"
            android:background="@drawable/button_border"
            android:padding="@dimen/menu_items_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rootcheck_insecure"
            android:fontFamily="monospace"
            android:textAlignment="center"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
